Fixing ordering and spacing errors

--- a/src/Components/Table/AthleteResultsTable.css
+++ b/src/Components/Table/AthleteResultsTable.css
@@ -17,3 +17,9 @@
 		margin-right: 2%;
 	}
 }
+
+.mobile-span {
+	display: block;
+	text-align: center;
+	width: 100%;
+}
